test/negative/t33.mli.expected

*******************************
********** Parsed file ********
*******************************
type t = {
  x: int }
[@@@gospel {| function f (x: t): int =
    match x with
    | {x=y} -> x |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

type t = {
x: int }
  

(*@ function f ... *)
File "t33.mli", line 14, characters 4-33:
Error: This term has type `t' but a term was expected of type `int'.
